Added method to delete all tasks for user
