# metools-backend/src/controllers/schema.rs
@@ -15,7 +15,7 @@ pub struct AppState {
 }
 
 #[derive(Serialize, ToSchema)]
-#[aliases(ResponseMe = Response<UserReturn>, ResponseLogin = Response<String>, ResponseSignUp = Response<UserReturn>, ResponseListTasks = Response<Vec<Task>>, ResponseCreateTask = Response<Task>, ResponseDeleteTaskByIdForUser = Response<String>)]
+#[aliases(ResponseMe = Response<UserReturn>, ResponseLogin = Response<String>, ResponseSignUp = Response<UserReturn>, ResponseListTasks = Response<Vec<Task>>, ResponseCreateTask = Response<Task>, ResponseDeleteTaskByIdForUser = Response<String>, ResponseDeleteAllTasksForUser = Response<String>)]
 pub struct Response<T: Serialize> {
     pub status: String,
     pub data: T,
